--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -140,6 +140,7 @@
     <Compile Include="CommonTests\TimeSpanFormatterTest.cs" />
     <Compile Include="CommonTests\EnumerableExtensionsTest.cs" />
     <Compile Include="ModelTests\CourseTest.cs" />
+    <Compile Include="ModelTests\HrItemTest.cs" />
     <Compile Include="ModelTests\HealthRecordTest.cs" />
     <Compile Include="ModelTests\HrCategoryTest.cs" />
     <Compile Include="SearchTests\DiagnosisSearchTest.cs" />
