--- a/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
+++ b/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="HrEditorTest.cs" />
     <Compile Include="HrListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearcherTest.cs" />
     <Compile Include="SuggestionsMakerTest.cs" />
     <Compile Include="SearchTest.cs" />
     <Compile Include="ViewModelTest.cs" />
