--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Entities\CriteriaGroup.cs" />
     <Compile Include="Entities\Criterion.cs" />
     <Compile Include="Entities\Estimator.cs" />
+    <Compile Include="Helpers\StringsLength.cs" />
     <Compile Include="Entities\Passport.cs" />
     <Compile Include="Entities\HrItem.cs" />
     <Compile Include="Domain\Comment.cs" />
@@ -236,7 +237,7 @@
     <Compile Include="Helpers\EditableObjectHelper.cs" />
     <Compile Include="Helpers\Many2ManyHelper.cs" />
     <Compile Include="Helpers\SettingsProvider.cs" />
-    <Compile Include="Helpers\HrItemObjectComparer.cs" />
+    <Compile Include="Helpers\EmtityComparers.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="Entities\SpecialityIcdBlock.cs" />
     <Compile Include="Entities\Word.cs" />
